# cognitive

./: .env  Cargo.toml  Dioxus.toml  build.rs  dev.sh  readme.md  run_dev.sh
assets/: main.css
backend/: .env  Cargo.toml  dev.sh  readme.md
backend/ops/db/: db_apply_changes.sh  db_init.sh  docker-compose.yml  init_db.sh  readme.md
backend/ops/db/migrations/: 0002_create_table_user_permissions.sql  0003_create_table_attribute_tmpls.sql  0004_create_table_object_tmpls.sql
backend/src/: database.rs  main.rs  server.rs
backend/src/domain/logic/: attr_tmpl_mgmt.rs  mod.rs  user_mgmt.rs
backend/src/domain/model/: id_gen.rs  mod.rs  user_def.rs
backend/src/infra/: auth.rs  mod.rs  server.rs  server_state.rs
backend/src/infra/auth/: auth_layers_useraccount.rs  mod.rs
backend/src/infra/http_api/: attr_tmpl_api.rs  auth_api.rs  login_api.rs  mod.rs  user_profile_api.rs
backend/src/infra/repos/: app_err_gen.rs  attr_tmpl_repo.rs  consts.rs  db.rs  mod.rs  obj_tmpl_repo.rs  user_repo.rs
backend/src/infra/server/: mod.rs  routes.rs  server.rs  server_state.rs  swagger.rs
docs/: readme.md
frontend/: Cargo.toml  Dioxus.toml  cognitive.db  dev.sh  readme.md  tailwind.css
frontend/assets/: blog.css  echo.css  hero.css  main.css  tailwind.css
frontend/assets/styles/: main.css
frontend/src/: lib.rs  main.rs
frontend/src/backend/: mod.rs  server.rs
frontend/src/backend/srvfns/: echo.rs
frontend/src/be/: database.rs  mod.rs
frontend/src/be/srvfns/: echo.rs
frontend/src/model/: mod.rs
frontend/src/ui/: app.rs  localstorage.rs  mod.rs  routes.rs  state.rs
frontend/src/ui/components/: card.rs  echo.rs  hero.rs  icons.rs  mod.rs  modals.rs  navbar.rs  navbar_menu.rs
frontend/src/ui/components/metamodel/: att_tmpl_form.rs  mod.rs
frontend/src/ui/views/: admin_view.rs  attr_tmpl_new_view.rs  attr_tmpl_view.rs  attr_tmpls_list_view.rs  blog_view.rs  data_mgmt_view.rs  data_view.rs  home_view.rs  link_view.rs  login_view.rs  logout_view.rs  mod.rs  obj_tmpl_view.rs  obj_view.rs  user_profile_view.rs
ops/: db_init.sh
ops/db_migrations/: 0003_create_table_tags.sql  0004_create_table_attribute_defs.sql  0005_create_table_entity_defs.sql  0006_create_table_entity_def_attr.sql  0006_create_table_entity_def_attribute_def_xref.sql  0006_create_table_entity_def_tags_xref.sql  0007_create_table_entities.sql  0007_create_table_entity_defs_attribute_defs_xref.sql  0008_create_table_entities.sql  0008_create_table_entity_attributes_varchar.sql  0008_create_table_entity_attrs.sql  0009_create_table_entity_link_defs.sql  0010_create_table_entity_link_defs_attribute_defs_xref.sql  0010_create_table_entity_links.sql  0011_create_table_entity_attributes_varchar.sql  0011_create_table_entity_links.sql  0011_create_table_text_attributes.sql  0012_create_table_smallint_attributes.sql  0012_create_table_text_attributes.sql  0013_create_table_bigint_attributes.sql  0013_create_table_smallint_attributes.sql  0014_create_table_bigint_attributes.sql  0014_create_table_integer_attributes.sql  0015_create_table_integer_attributes.sql  0015_create_table_real_attributes.sql  0016_create_table_boolean_attributes.sql  0016_create_table_real_attributes.sql  0017_create_table_boolean_attributes.sql  0017_create_table_date_attributes.sql  0018_create_table_date_attributes.sql  0018_create_table_timestamp_attributes.sql  0019_create_table_timestamp_attributes.sql
shlib/: Cargo.toml  readme.md
shlib/src/: app_err.rs  lib.rs
shlib/src/domain/model/: auth.rs  id.rs  item_type.rs  mod.rs  user.rs
shlib/src/domain/model/data/meta/: attr_tmpl.rs  attr_val_type.rs  mod.rs  obj_tmpl.rs
shlib/src/http_dtos/: error_response.rs  login_dtos.rs  mod.rs  user_profile_dtos.rs
src/: lib.rs  main.rs
src/assets/: main.css
src/components/: echo.rs
src/domain/model/: attribute_def.rs  contact_point.rs  id.rs  mod.rs  protocol.rs  service.rs  tag.rs  user.rs
src/domain/model/adaptive/: attribute_def.rs  entity.rs  entity_link_def.rs  item_type.rs  mod.rs  tag.rs  text_attribute.rs
src/domain/model/metamodel/: attr_def.rs  bool_attr.rs  boolean_attr.rs  ent_def.rs  ent_link.rs  ent_link_def.rs  entity.rs  entity_def.rs  int_attr.rs  item_type.rs  mod.rs  smallint_attr.rs  tag.rs  text_attr.rs
src/server/: app_err_uc.rs  auth.rs  database.rs  fns.rs  mod.rs  server.rs  session.rs  state.rs  websocket_server.rs  websockets.rs
src/server/domain/model/: contact_point.rs  mod.rs  protocol.rs  user.rs
src/server/fns/: attr_def_fns.rs  auth.rs  echo.rs  ent_def_fns.rs  ent_fns.rs  ent_link_def_fns.rs  ent_link_fns.rs  mod.rs  tag_fns.rs  tags.rs  user_profile.rs
src/server/fns/config/: get_ui_config.rs  mod.rs  ui_config.rs
src/server/logic/: create_id.rs  id.rs  mod.rs  tag_mgmt.rs  user_mgmt.rs
src/server/logic/adaptive/: attr_def_mgmt.rs  mod.rs
src/server/logic/metamodel/: attr_def_mgmt.rs  ent_def_mgmt.rs  ent_link_def_mgmt.rs  ent_link_mgmt.rs  ent_mgmt.rs  mod.rs  tag_mgmt.rs
src/server/model/: id.rs
src/server/repos/: mod.rs  tags_repo.rs  users_repo.rs
src/server/repos/adaptive/: attr_defs_repo.rs
src/server/repos/metamodel/: attr_def_repo.rs  attr_defs_repo.rs  ent_def_repo.rs  ent_link_def_repo.rs  ent_link_repo.rs  ent_repo.rs  mod.rs  tags_repo.rs
src/shared/: app_err.rs
src/ui/: action.rs  app.rs  mod.rs  mode.rs  routes.rs  state.rs  ui.rs  ui_global_signals.rs  ui_global_state.rs  ui_globals.rs  ui_state.rs
src/ui/components/: echo.rs
src/ui/comps/: breadcrumb.rs  gt_sep.rs  mod.rs  modal.rs  modals.rs  select.rs
src/ui/comps/meta/: attr_def_form.rs  mod.rs  tag_form.rs
src/ui/comps/metamodel/: attr_def_form.rs  ent_form.rs  ent_link_form.rs  mod.rs
src/ui/comps/nav/: common.rs  nav.rs  nav_user_menu.rs
src/ui/pages/: home.rs  login.rs  logout.rs  mod.rs  user_profile.rs
src/ui/pages/admin/: admin_home.rs  admin_page.rs  attrs_def_list_page.rs  attrs_def_new_page.rs  attrs_defs.rs  attrs_defs_page.rs  mod.rs
src/ui/views/: home.rs  navbar.rs
src/views/: blog.rs  home.rs  mod.rs  navbar.rs
x_docs/: api_notes.md  readme.md
(+36 files in other folders)
