[package]
name = "servicentral"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

##############
[dependencies]
##############

serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.5.2" }

tracing = "0.1.40"
dioxus-logger = "0.5.1"
axum = { version = "0.7.5", optional = true }
tokio = { version = "1.38.0", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["auth"], optional = true }
http = { version = "1.0.0", optional = true }
axum-connect = { version = "0.3.2", optional = true }
prost = { version = "0.13.1", optional = true }

##############
[features]
##############

default = []

server = [ "dioxus/axum", "axum", "axum-connect", "tokio", "dioxus-fullstack/axum", "tower-http", "http", "prost" ]

web = [ "dioxus/web" ]

[build-dependencies]
axum-connect-build = "0.3.2"
