[package]
name = "servicentral"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


##############
[dependencies]
##############

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.5.2" }

serde = { version = "1.0.197", features = ["derive"] }

tracing = "0.1.40"
log = { version = "0.4.21", optional = true }
simple_logger = { version = "5.0.0", optional = true }

axum = { version = "0.7.5", features = [ "ws" ], optional = true }
axum-extra = { version = "0.9.3", features = [ "typed-header" ], optional = true }
tokio = { version = "1.38.0", features = [ "full" ], optional = true }
tower = { version = "0.4.13", features = [ "util" ],optional = true }
tower-http = { version = "0.5.2", features = [ "auth", "fs", "trace" ], optional = true }
http = { version = "1.0.0", optional = true }
tokio-tungstenite = { version = "0.23.1", optional = true }

futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = [ "sink", "std" ], optional = true }


##############
[features]
##############

default = []

server = [ 
    "dioxus/axum", "axum", "axum-extra", "dioxus-fullstack/axum",
    "tokio", "tokio-tungstenite",
    "tower-http", "http",
    "futures", "futures-util",
    "log", "simple_logger"
]

web = [ "dioxus/web" ]

