[package]
name = "servicentral"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

#############
[profile.dev]
#############
codegen-units = 16


##############
[dependencies]
##############

dioxus = { version = "0.5.6", features = ["fullstack", "router"] }
dioxus-web = { version = "0.5.6", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.5.6" }

serde = { version = "1.0.210", features = [ "derive", "rc" ] }
serde_json = "1.0.128"

tracing = "0.1.40"
log = { version = "0.4.22", optional = true }
simple_logger = { version = "5.0.0", optional = true }
console_log = { version = "1.0.0", optional = true }
thiserror = { version = "1.0.63" }
anyhow = "1.0.89"

axum = { version = "0.7.5", features = ["ws"], optional = true }
axum-extra = { version = "0.9.3", features = ["typed-header"], optional = true }
axum_session = { version = "0.14.0", optional = true }
axum_session_auth = { version = "0.14.0", optional = true }
axum_session_sqlx = { version = "0.1.1", features = ["postgres", "tls-rustls"], optional = true }

tokio = { version = "1.38.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.23.1", optional = true }
tower = { version = "0.4.13", features = ["util"], optional = true }
tower-http = { version = "0.5.2", features = [ "auth", "fs", "trace" ], optional = true }
http = { version = "1.0.0", optional = true }

async-trait = { version = "0.1.71", optional = true }
sqlx = { version = "0.7.4", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
], optional = true }

web-sys = { version = "0.3.69", features = [ "Storage", "Window" ] }
# nid = { version = "3.0.0", optional = true }
nid = { version = "3.0.0" }
getrandom = { version = "0.2", features = ["js"] }
fastrand = { version = "2.1.0", optional = true }
md5 = { version = "0.7.0", optional = true }

dotenvy = { version = "0.15.7", optional = true }

strum = { version = "0.26.1", features = ["derive"] }

chrono = { version = "0.4.38" }

##########
[features]
##########

default = []

server = [
    "axum",
    "axum-extra",
    "axum_session", "axum_session_auth", "axum_session_sqlx",
    "dioxus/axum",
    "dioxus-fullstack/axum",
    "tokio",
    "tokio-tungstenite",
    "tower-http",
    "http",
    "futures", "futures-util",
    "log", "console_log", "simple_logger",
    "async-trait",
    "sqlx",
    # "nid",
    "fastrand", "md5",
    "dotenvy"
]

web = [
    "dioxus/web",
    "log", 
    "console_log"
]
