#########
[package]
#########

name = "backend"
description = "cognitive back-end service"
version = "2.0.0-alpha.1"
edition = "2024"
authors = ["dxps <dev@devisions.io>"]

[[bin]]
name = "backend"
path = "src/main.rs"

##############
[dependencies]
##############

shlib = { path = "../shlib" }
anyhow = { version = "1.0.100" }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.7", features = [ "macros", "json" ] }
axum_session = { version = "0.17.1" }
axum_session_auth = { version = "0.17.0" }
axum_session_sqlx = { version = "0.6.1", features = [ "postgres" ] }
dotenvy = { version = "0.15.7" }
http = { version = "1.4.0" }
log = { version = "0.4.29" }
serde = { version = "1.0.228", features=["derive"] }
serde_json = { version = "1.0.104" }
simple_logger = { version = "5.1.0" }
sqlx = { version = "0.8.6", default-features = false, features = [ 
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono"
] }
tokio = { version = "1.48.0" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.8" }
