#########
[package]
#########

name = "backend"
description = "Cognitive :: Back-end Service"
version = "2.0.0-alpha.2"
edition = "2024"
authors = ["dxps <dev@devisions.io>"]

[[bin]]
name = "server"
path = "src/main.rs"

##############
[dependencies]
##############

shlib = { path = "../shlib" }

anyhow = { version = "=1.0.100" }
async-trait = { version = "=0.1.89" }
axum = { version = "=0.8.8", features = [ "macros", "json" ] }
axum_session = { version = "=0.17.1", features = [ "rest_mode" ] }
axum_session_auth = { version = "=0.17.0" }
axum_session_sqlx = { version = "=0.6.1", features = [ "postgres" ] }
chrono = { version = "=0.4.43" }
dotenvy = { version = "=0.15.7" }
fastrand = { version = "=2.3.0" }
http = { version = "=1.4.0" }
indexmap = { version = "=2.13.0", features = [ "serde" ] }
log = { version = "=0.4.29" }
md5 = { version = "=0.8.0" }
nid = { version = "=3.0.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149" }
simple_logger = { version = "=5.1.0" }
sqlx = { version = "=0.8.6", default-features = false, features = [ 
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono"
] }
tokio = { version = "=1.49.0" }
tower = { version = "=0.5.3" }
tower-http = { version = "=0.6.8", features = [ "cors" ] }

utoipa = { version = "=5.4.0" }
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
