#########
[package]
#########

name = "cognitive"
description = "cognitive front-end"
version = "2.0.0-alpha.1"
edition = "2024"
authors = ["dxps <dev@devisions.io>"]


##############
[dependencies]
##############
shlib = { path = "../shlib" }

dioxus = { version = "0.7.2", features = [ "router", "fullstack" ] }

anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }

serde = { version = "1.0.228" }

dotenvy = { version = "0.15.7", optional = true }

log = { version = "0.4.29" }
tracing = { version = "0.1.44", optional = true }
simple_logger = { version = "5.1.0", optional = true }

rusqlite = { version = "0.38.0", optional = true }

serde_json = { version = "1.0.148" }
reqwest = { version = "0.13.1", features = [ "json" ] }

##########
[features]
##########

default = ["web"]

# The features that are only required for the web = ["dioxus/web"] build target 
# should be optional and only enabled in the web = ["dioxus/web"] feature.
web = ["dioxus/web"]

# The features that are only required for the desktop = ["dioxus/desktop"] build target
# should be optional and only enabled in the desktop = ["dioxus/desktop"] feature.
desktop = ["dioxus/desktop"]

# The features that are only required for the mobile = ["dioxus/mobile"] build target
# should be optional and only enabled in the mobile = ["dioxus/mobile"] feature.
mobile = ["dioxus/mobile"]

# The feature that are only required for the server = ["dioxus/server"] build target
# should be optional and only enabled in the server = ["dioxus/server"] feature.
server = [
    "dioxus/server", 
    "dep:dotenvy",
    "dep:rusqlite",
    "dep:tracing", 
    "dep:simple_logger"
]

#################
[profile.release]
#################

lto = true
opt-level = 3
strip = true

