#########
[package]
#########

name = "shlib"
description = "The library that is shared between back-end and front-end sides."
version = "2.0.0-alpha.1"
edition = "2024"

##############
[dependencies]
##############

anyhow = { version = "=1.0.100" }
dioxus = { version = "=0.7.2" }
thiserror = { version = "=2.0.18" }
serde = { version = "1.0.228" }
utoipa = { version = "5.4.0" }
strum = { version = "=0.27.2", features = ["derive"] }

